[gd_scene load_steps=6 format=3 uid="uid://cr3lha6f243ji"]

[ext_resource type="PackedScene" uid="uid://h3pjqsmvpqim" path="res://game/block.tscn" id="1_i3sk0"]
[ext_resource type="Script" path="res://game/player/player_block.gd" id="2_uuffr"]

[sub_resource type="Gradient" id="Gradient_r0432"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_iiyix"]
resource_name = "on_hit_or_death"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h8s1m"]
_data = {
"on_hit_or_death": SubResource("Animation_iiyix")
}

[node name="PlayerBlock" instance=ExtResource("1_i3sk0")]
script = ExtResource("2_uuffr")

[node name="Area2D" parent="." index="1"]
unique_name_in_owner = true

[node name="CollisionShape2D" parent="Area2D" index="0"]
unique_name_in_owner = true

[node name="HitParticles" type="CPUParticles2D" parent="." index="2"]
unique_name_in_owner = true
emitting = false
amount = 25
lifetime = 0.15
one_shot = true
randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(64, 64)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 500.0
linear_accel_min = -500.0
linear_accel_max = -500.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 5.0
scale_amount_max = 20.0
color = Color(1, 1, 1, 0.411765)
color_ramp = SubResource("Gradient_r0432")

[node name="DeathParticles" type="CPUParticles2D" parent="." index="3"]
unique_name_in_owner = true
position = Vector2(0, -64)
emitting = false
amount = 25
lifetime = 0.5
one_shot = true
randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(64, 64)
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 500.0
linear_accel_min = -500.0
linear_accel_max = -500.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 5.0
scale_amount_max = 20.0
color = Color(1, 0.478431, 0.270588, 0.768627)
color_ramp = SubResource("Gradient_r0432")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_h8s1m")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
